[package]
name = "brick_ogn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.1"
json = "0.12.4"
log = "0.4.20"
serde = { version = "1", features = ["derive"] }
